# OSDev

./: .gitignore  BootMain.cpp  CMakeLists.txt  StartPoint.asm  TestBootSector.bat  bochs_config  bochs_config_win  boot_sect_hello.asm  boot_sect_memory.asm  boot_sect_stack.asm  bootloader.ld  build_binutils.sh  build_gcc.sh  bx_enh_dbg.ini  debug_win.sh  floppy.img  make.bat  make.sh  makeIso.sh  memory_map.h  memory_map.ld  operatingsystem.ld  run.sh  run_arch.sh  run_win.sh
Fat12/: run.sh  test.cpp
Stage1/: boot_sector.asm  boot_working.asm  disk.asm  make.sh  print.asm
Stage1/examples/: boot_sect_stack.asm
Stage2/: entry.asm  entry_orig.asm  entry_test1.asm  link.ld  link.lnk  main.c  main.cpp  main.err  make.sh  print.asm  puts.asm  stage2.map  stdint.h  stdint.hpp  stdio.c  stdio.cpp  stdio.h  stdio.hpp  x86.asm  x86.h  x86.hpp
bootsector_examples/: run_arch.sh
